# LBM_SMC_GPU

./: .gitignore  CMakeLists.txt  README.md
app/: main.cu
include/filter/: smc_gpu.h
include/lbm/: lbm_gpu.h
renderer/: render_gpu.cu  render_gpu.h
src/filter/: smc_gpu.cu
src/lbm/: lbm_gpu.cu
tests/: LBM_test.cpp  lbm
utils/: metrics.cu  metrics.h
